// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostContent - Snapshots > matches snapshot with multiline content (preserves newlines) 1`] = `
<div
  class="gap-3"
  data-testid="container"
>
  <div
    data-testid="post-text"
  >
    Line 1
Line 2
Line 3
  </div>
</div>
`;

exports[`PostContent - Snapshots > matches snapshot with repost 1`] = `
<div
  class="gap-3"
  data-testid="container"
>
  <div
    data-testid="post-text"
  >
    Repost comment
  </div>
  <div
    class="rounded-md bg-muted py-0"
    data-testid="card"
  >
    <div
      class="flex flex-col gap-4 p-6"
      data-testid="card-content"
    >
      <div
        data-testid="post-header"
      >
        PostHeader 
        original-author:original-post
      </div>
      <div
        data-testid="post-content"
      >
        PostContent 
        original-author:original-post
      </div>
    </div>
  </div>
</div>
`;

exports[`PostContent - Snapshots > matches snapshot with single-line content 1`] = `
<div
  class="gap-3"
  data-testid="container"
>
  <div
    data-testid="post-text"
  >
    Single line post
  </div>
</div>
`;
